--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
 <head>
   <title>JavaScript Exercises</title>
-  <!-- Insert your JavaScript file -->
+  <script src = "script.js"></script>
 </head>
 <body>
   <h3>Basic JavaScript Exercises</h3>
   <!-- Insert script -->
+  <script>
+    console.log("external JS");
+  </script>
 </body>
 </html>
